ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - AWStats:                                              |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-09-03 Malte Geierhos
	- GUI: 
		* Fixed editing of ftp Accounts with custom dir doesn't work
		* Fixed PMA css (pictures have wrong path)
		* Fixed #611 (wrong path / image preloader)

2007-09-02 Benedikt Heintel
	- GUI:
		* Fixed #625: Error in SQL syntax on Admin Log -> Page 2

2007-09-01 Raphael Geissert
    - CONFIGS:
        * Fixed #623: open_basedir restriction in effect. File(/var/log/chkrootkit.log) is not within the allowed path(s)
    - GUI:
        * Fixed #624: welcome mail contains html entities
        * Fixed error in admin/rootkit_log.php
        * Partially implemented #567

2007-09-01 Raphael Geissert
    - GUI:
        * Fixed some drawn backs in previous revisions
        * Added support for multiple anti-rootkit tools (including colouring for chkrootkit-like logs)
        * Correctly fixed #619
        * Fixed #621: database name being escaped with single quote in include/i18n.php
        * Fixed an error where mount points with special characters where converted to IDN format
    - CONFIGS:
        * Removed cron.d/ispcp.phptemp (merged into cron.d/ispcp)
        * Fixed error when restarting ispCP services when they were not already running
        * Awstats entry in cron.d/ispcp is not built into ispcp-setup anymore
        * Partially updated fedora's, redhat's and suse10's config files
    - LANGUAGES:
        * Updated cs_CS translation (thanks to Josef Pinc)

2007-09-01 Benedikt Heintel
	- GUI:
		* Fixed #5: admin cannot update some reseller-settings
		* Fixed #601: change client details