@@ -6,8 +6,16 @@ ispCP ω 1.0.0 Changelog
 |               * gui: disable stats-alias in client menu         |
 \_________________________________________________________________/
 
+2007-09-03 Raphael Geissert
+    - DOCS:
+        * Fixed #627: chkrootkit is missing on the package list
+	- GUI:
+		* Fixed #629: : doesn't exist or can't be read.
+	- SETUP:
+		* Fixed #628: rkhunter during the setup
+
 2007-09-03 Malte Geierhos
-	- GUI: 
+	- GUI:
 		* Fixed editing of ftp Accounts with custom dir doesn't work
 		* Fixed PMA css (pictures have wrong path)
 		* Fixed #611 (wrong path / image preloader)
@@ -16,13 +24,15 @@ ispCP ω 1.0.0 Changelog
 	- GUI:
 		* Fixed #625: Error in SQL syntax on Admin Log -> Page 2
 
-2007-09-01 Raphael Geissert
+2007-09-02 Raphael Geissert
     - CONFIGS:
         * Fixed #623: open_basedir restriction in effect. File(/var/log/chkrootkit.log) is not within the allowed path(s)
     - GUI:
         * Fixed #624: welcome mail contains html entities
         * Fixed error in admin/rootkit_log.php
         * Partially implemented #567
+	- MAKEFILE:
+		* Some more work on #394
 
 2007-09-01 Raphael Geissert
     - GUI:
